# multiagent_ai_financial_analyst

./: .env.example  .gitignore  README.md  agents.py  api.py  app.py  data_collector.py  demo.py  docker-compose.yml  graph.py  pyproject.toml  requirements.txt  visualize_graph.py
src/: agents.py  api.py  graph.py  prompts.py
tests/: test_tools.py
